--- a/web-app/.eslintrc.json
+++ b/web-app/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": "next/core-web-vitals"
+    "extends": ["next", "prettier"],
+    "rules": {
+        "quotes": ["error", "single", { "avoidEscape": true }],
+        "max-len": ["error", 120],
+        "semi": ["error", "always"],
+        "jsx-quotes": ["error", "prefer-single"],
+        "no-else-return": 2,
+        "space-unary-ops": 2
+    }
 }
