--- a/web-app/package.json
+++ b/web-app/package.json
@@ -24,6 +24,7 @@
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "eslint-config-prettier": "8.6.0",
+        "formik": "^2.2.9",
         "next": "13.1.6",
         "prettier": "2.8.4",
         "react": "18.2.0",
