--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,7 +16,7 @@
         "@fontsource/roboto": "4.5.8",
         "@mui/icons-material": "5.11.0",
         "@mui/material": "5.11.8",
-        "@trivago/prettier-plugin-sort-imports": "4.0.0",
+        "@trivago/prettier-plugin-sort-imports": "4.1.1",
         "@types/node": "18.13.0",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
@@ -26,6 +26,7 @@
         "eslint-config-prettier": "8.6.0",
         "formik": "^2.2.9",
         "next": "13.1.6",
+        "notistack": "^3.0.1",
         "prettier": "2.8.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
