--- a/web-app/package.json
+++ b/web-app/package.json
@@ -19,6 +19,7 @@
         "@trivago/prettier-plugin-sort-imports": "4.1.1",
         "@types/node": "18.13.0",
         "@types/react": "18.0.27",
+        "@types/react-calendar": "^3.9.0",
         "@types/react-dom": "18.0.10",
         "axios": "1.3.2",
         "eslint": "8.34.0",
@@ -29,6 +30,7 @@
         "notistack": "^3.0.1",
         "prettier": "2.8.4",
         "react": "18.2.0",
+        "react-calendar": "^4.0.0",
         "react-dom": "18.2.0",
         "typescript": "4.9.5"
     }
