--- a/web-app/package.json
+++ b/web-app/package.json
@@ -25,12 +25,12 @@
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "eslint-config-prettier": "8.6.0",
-        "formik": "^2.2.9",
+        "formik": "2.2.9",
         "next": "13.1.6",
-        "notistack": "^3.0.1",
+        "notistack": "3.0.1",
         "prettier": "2.8.4",
         "react": "18.2.0",
-        "react-calendar": "^4.0.0",
+        "react-calendar": "4.0.0",
         "react-dom": "18.2.0",
         "typescript": "4.9.5"
     }
