--- a/web-app/package.json
+++ b/web-app/package.json
@@ -20,6 +20,7 @@
         "@types/node": "18.13.0",
         "@types/react": "18.0.27",
         "@types/react-calendar": "^3.9.0",
+        "@types/react-datepicker": "^4.10.0",
         "@types/react-dom": "18.0.10",
         "axios": "1.3.2",
         "eslint": "8.34.0",
@@ -31,6 +32,7 @@
         "prettier": "2.8.4",
         "react": "18.2.0",
         "react-calendar": "4.0.0",
+        "react-datepicker": "^4.10.0",
         "react-dom": "18.2.0",
         "typescript": "4.9.5"
     }
